--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "frontend",
+  "name": "homepage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "antd": "^5.14.1",
     "react": "^18.2.0",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "simplebar-react": "^3.2.4",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
