--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
