--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '18' 
 
     - name: Install Dependencies
-      run: npm install 
+      run: npm install --force
     - name: Build React App
       run: npm run build 
     - name: Install SSH key
