--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Install SSH key
       run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo ${{secret.SSH_PRIVATE_KEY}} > ~/.ssh/id_rsa
-          ssh-keyscan -H ${{secret.SSH_HOST}} >> ~/.ssh/known_hosts
+          echo ${{secrets.SSH_PRIVATE_KEY}} > ~/.ssh/id_rsa
+          ssh-keyscan -H ${{secrets.SSH_HOST}} >> ~/.ssh/known_hosts
 
     - name: Deploy to server
       run: |
-          ssh ${{secret.SSH_USER  }}@${{secret.SSH_HOST}} "cd ${{secret.WORD_DIR}} && git checkout ${{secret.MAIN_BRANCH}}" && it pull ${{secret.MAIN_BRANCH}}
+          ssh ${{secrets.SSH_USER  }}@${{secrets.SSH_HOST}} "cd ${{secrets.WORD_DIR}} && git checkout ${{secrets.MAIN_BRANCH}}" && it pull ${{secrets.MAIN_BRANCH}}
