--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo ${{secrets.SSH_PRIVATE_KEY}} > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{secrets.SSH_HOST}} >> ~/.ssh/known_hosts
+        ssh-keyscan -H ${{secrets.SSH_HOST}} > ~/.ssh/known_hosts
 
     - name: Deploy to server
       run: |
