--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
 
     - name: Deploy to server
       run: |
-        ssh ${{secrets.SSH_USER  }}@${{secrets.SSH_HOST}} "cd ${{secrets.WORD_DIR}} && git checkout ${{secrets.MAIN_BRANCH}}" && it pull ${{secrets.MAIN_BRANCH}}
+        ssh ${{secrets.SSH_USER  }}@${{secrets.SSH_HOST}} "cd ${{secrets.WORD_DIR}} && git checkout ${{secrets.MAIN_BRANCH}}" && git pull ${{secrets.MAIN_BRANCH}}
