--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo $SSH_PRIVATE_KEY > ~/.ssh/id_rsa
+        echo $SSH_HOST
         ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
 
     - name: Deploy to server
