--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
           echo "$SSH_HOSTS" > ~/.ssh/known_hosts
     - name: Deploy to server
       run: |
-        rsync -rav --delete build/ $SSH_USER@$SSH_HOST:$WORD_DIR
+        rsync -rav --delete build/ ubuntu@192.168.99.75:/srv/frontend
     - name: Clean 
       run: rm -rf ~/.ssh
