--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,12 @@ jobs:
       run: npm run build 
     - name: Install SSH key
       run: |
-          mkdir -p ~/.ssh/
+          # mkdir -p ~/.ssh/
+          # echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          # sudo chmod 600 ~/.ssh/id_rsa
+          # echo "$SSH_HOSTS" > ~/.ssh/known_hosts
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          sudo chmod 600 ~/.ssh/id_rsa
           echo "$SSH_HOSTS" > ~/.ssh/known_hosts
     - name: Deploy to server
       run: |
