--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
           echo "$SSH_HOSTS" > ~/.ssh/known_hosts
     - name: Deploy to server
       run: |
-        rsync -ahrz --delete-after -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" build/ ubuntu@18.181.78.211:/home/ubuntu
+        rsync -ahrz --delete-after -e "ssh -i all_key.pem" build/  ubuntu@ec2-18-181-78-211.ap-northeast-1.compute.amazonaws.com:/home/ubuntu
     - name: Clean 
       run: rm -rf ~/.ssh
