--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       run: npm run build 
     - name: Install SSH key
       run: |
+          chmod 400 all_key.pem
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           echo "$SSH_HOSTS" > ~/.ssh/known_hosts
