--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
           echo "$SSH_HOSTS" > ~/.ssh/known_hosts
     - name: Deploy to server
       run: |
-        rsync -ahrz --delete-after -e "ssh -i all_key.pem" build/  ubuntu@ec2-18-181-78-211.ap-northeast-1.compute.amazonaws.com:/home/ubuntu
+        ssh -i "all_key.pem" ubuntu@ec2-18-181-78-211.ap-northeast-1.compute.amazonaws.com
     - name: Clean 
       run: rm -rf ~/.ssh
