--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Install Dependencies
       run: npm install --force
     - name: Build React App
-      run: npm run build 
+      run: 
+        npm run build
+        pwd
   deploy:
     runs-on: self-hosted
     steps:
