--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18' 
 
     - name: Install Dependencies
       run: npm install --force
