--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       uses: shimataro/ssh-key-action@v2
       with:  
         key: $SSH_PRIVATE_KEY
+        known_hosts: unnecessary
     - name: Adding Known Hosts
       run: ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
       
