--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,18 +25,13 @@ jobs:
         pwd
         npm run build
         ls -la
-    - name: Chose file
-      uses: actions/download-artifact@v2
-      with:
-          name: build
-          path: build
     - name: Create SSH key
       run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          echo "$SSH_HOSTS" > ~/.ssh/known_hosts
+          ssh-keyscan -t rsa $SSH_HOST>> ~/.ssh/known_hosts
     - name: Deploy with rsync
-      run: rsync -rav --delete build/ user@host:/
+      run: rsync -rav --delete build/ ubuntu@192.168.99.75:/
       
     - name: Clean 
       run: rm -rf ~/.ssh
