--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           ssh-keyscan -H "$SSH_HOST" > ~/.ssh/known_hosts
+          ls -la ~/.ssh
+          cat ~/.ssh/id_rsa
+          cat ~/.ssh/known_hosts
     - name: Deploy with rsync
       run: rsync -rav --delete build/ root@192.168.99.75:/
       
