--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          ssh-keyscan -H "$SSH_HOST" > ~/.ssh/known_hosts
+          echo "$SSH_KNOW_HOST" > ~/.ssh/known_hosts
           ls -la ~/.ssh
           cat ~/.ssh/id_rsa
           cat ~/.ssh/known_hosts
