--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "antd": "^5.14.1",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^6.11.1",
